# camsync

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: browse.c  browse.h  camsync.c  config.c  config.h  daemon.c  daemon.h  download.c  download.h  jobqueue.c  jobqueue.h  logging.c  logging.h
